# JARVIS

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  Dockerfile.sandbox  GEMINI.md  README.de.md  README.en.md  README.fr.md  README.ja.md  README.ko.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.override.yml  docker-compose.yml  main.py  pyproject.toml  reproduce_context_issue.py
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_schema.py  002_add_persona_override.py  003_file_size_bigint.py  004_add_agent_sessions.py  005_add_cron_jobs.py  006_add_webhooks.py  007_add_user_roles.py  008_add_proactive_triggers.py  009_add_plugin_configs.py  010_add_audit_logs.py  011_add_api_keys.py  012_add_job_executions.py  013_multi_tenant_predesign.py  014_webhook_deliveries.py  015_activate_multi_tenant.py  016_workspace_members_invitations.py  017_workspace_settings.py  023f0ff81c26_add_workflows_table.py  039a639fc3d2_add_message_parent_id.py  2e8ac4d05e31_add_llm_params_to_user_settings.py  3c2651fd98a3_add_workflow_runs.py  3e2598640e52_merge_phase19_webhook_and_phase21_.py  4399e6b73915_add_shared_conversations.py  6b20ba595a05_add_active_leaf_id_to_conversations.py  6c691c025f2e_add_personas.py  7167dd772125_add_webhook_dead_letters_and_cleanup.py  73bcfb00a52e_merge_heads_phase19.py  83787055ad7a_add_image_urls_to_messages.py  89ffae495641_phase18_persona_fields.py  8a5a139f45c7_add_persona_override_to_conversation.py  a1b2c3d4e5f6_add_share_token_to_shared_conversations.py  a1b2c3d4e5f6_add_user_memories.py  a1b2c3d4e5f6_add_webhook_dead_letters_and_cleanup.py  a1b2c3d4e5f7_add_is_bookmarked_to_messages.py  b1c2d3e4f5a6_add_user_rating_to_messages.py  b2c3d4e5f6a1_add_user_memories.py  b629655503d7_add_notifications.py  c1d2e3f4a5b6_add_search_gin_indexes.py  c2d3e4f5a6b7_add_conversation_tags.py  c61ab334c523_add_refresh_tokens.py  (+11 more)
backend/app/: main.py  worker.py
backend/app/agent/: compiler.py  compressor.py  graph.py  interfaces.py  interpreter.py  llm.py  persona.py  protocol.py  router.py  skills.py  state.py  supervisor.py  title_generator.py  workflow_schema.py
backend/app/api/: admin.py  auth.py  canvas.py  chat.py  chat_files.py  conversations.py  cron.py  deps.py  documents.py  export.py  folders.py  gateway.py  invitations.py  keys.py  logs.py  memory.py  notifications.py  organizations.py  personas.py  plugins.py  public.py  router.py  search.py  settings.py  tts.py  usage.py  voice.py  webhooks.py  workflows.py  workspaces.py
backend/app/channels/: base.py  discord.py  discord_channel.py  feishu.py  loader.py  slack.py  telegram.py  webhook.py  wechat.py  whatsapp.py
backend/app/core/: audit.py  config.py  limiter.py  llm_config.py  llm_factory.py  logging.py  logging_middleware.py  metrics.py  network.py  notifications.py  permissions.py  pricing.py  sanitizer.py  security.py
backend/app/db/: models.py  session.py
backend/app/gateway/: agent_runner.py  channel_registry.py  models.py  router.py  security.py  session_manager.py
backend/app/infra/: minio.py  ollama.py  qdrant.py  redis.py
backend/app/plugins/: __init__.py  api.py  loader.py  registry.py  sdk.py  skill_parser.py  type_detector.py
backend/app/rag/: chunker.py  context.py  embedder.py  indexer.py  retriever.py
backend/app/sandbox/: docker_executor.py  manager.py
backend/app/scheduler/: fetch.py  prompts.py  runner.py  trigger_result.py  trigger_schemas.py  triggers.py
backend/app/services/: agent_engine.py  agent_execution.py  audit.py  authorization.py  chat_stream_service.py  config_service.py  context_service.py  cron_service.py  document_service.py  memory_sync.py  model_discovery.py  repositories.py  skill_market.py  tool_service.py  workspace_service.py
backend/app/tools/: browser_tool.py  canvas_tool.py  code_exec_tool.py  cron_tool.py  datetime_tool.py  file_tool.py  image_gen_tool.py  mcp_client.py  memory_tool.py  rag_tool.py  search_tool.py  shell_tool.py  subagent_tool.py  user_memory_tool.py  web_fetch_tool.py
backend/app/workflows/: executor.py
backend/skills/: code-review.md
backend/tests/: conftest.py  test_asyncsession_loop_contamination.py  test_config.py  test_deliver_webhook.py  test_e2e.py  test_job_execution_model.py  test_metrics.py  test_openclaw_features.py  test_plugins.py  test_security.py  test_semantic_watcher_e2e.py  test_worker.py
backend/tests/agent/: test_compiler.py  test_compressor.py  test_experts.py  test_failover.py  test_graph.py  test_interfaces.py  test_llm.py  test_llm_fallback.py  test_ollama_llm.py  test_ollama_tools.py  test_persona.py  test_router.py  test_skills.py  test_state.py  test_supervisor.py  test_title_generator.py  test_workflow_schema.py
backend/tests/api/: conftest.py  test_admin.py  test_admin_stats.py  test_api_key_auth.py  test_api_keys.py  test_auth.py  test_canvas.py  test_chat.py  test_chat_agent_session.py  test_chat_context.py  test_chat_files.py  test_chat_rag.py  test_chat_routing.py  test_conversations.py  test_cron_v2.py  test_deps.py  test_documents.py  test_export.py  test_folders.py  test_gateway.py  test_invitations.py  test_keys.py  test_logs.py  test_memory.py  test_notifications.py  test_ollama_models_api.py  test_ollama_stream.py  test_organizations.py  test_personas.py  test_plugin_config.py  test_plugins.py  test_plugins_install.py  test_public.py  test_public_share_token.py  test_search.py  test_settings.py  test_tts.py  test_usage.py  test_voice.py  test_webhooks.py  (+3 more)
backend/tests/channels/: test_discord.py  test_feishu.py  test_slack.py  test_telegram.py  test_wechat.py
backend/tests/core/: test_audit.py  test_limiter.py  test_llm_config.py  test_permissions.py  test_sanitizer.py  test_security_api_keys.py  test_security_multi_key.py
backend/tests/db/: test_agent_session.py  test_api_key_model.py  test_conversation_model.py  test_cron_job_model.py  test_models.py  test_multi_tenant_models.py  test_session.py  (+3 more)
(+417 files in other folders)
