[project]
name = "jarvis"
version = "0.1.0"
description = "Jarvis AI assistant - monorepo root (dev tooling only)"
readme = "README.md"
requires-python = ">=3.13"

dependencies = []

[project.optional-dependencies]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.11",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
