[project]
name = "jarvis-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.7.0",
    "PyJWT[crypto]>=2.10.0",
    "cryptography>=44.0.0",
    "slowapi>=0.1.9",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.12",
    "langgraph>=1.0.5",
    "langchain-core>=1.2.7",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",
    "qdrant-client>=1.12.0",
    "redis[hiredis]>=5.2.0",
    "minio>=7.2.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "tiktoken>=0.8.0",
    "httpx>=0.28.0",
    "prometheus-fastapi-instrumentator>=7.0",
    "structlog>=25.0.0",
    "tavily-python>=0.7.22",
    "trafilatura>=2.0.0",
    "playwright>=1.58.0",
    "aiogram>=3.25.0",
    "discord-py>=2.7.0",
    "pyyaml>=6.0.3",
    "mcp>=1.0.0",
    "apscheduler>=3.10",
    "edge-tts>=7.2.7",
    "slack-bolt>=1.27.0",
    "slack-sdk>=3.40.1",
    "docker>=7.1.0",
    "twilio>=9.10.2",
    "langchain-ollama>=1.0.1",
    "arq>=0.25",
    "prometheus-client>=0.24.1",
    "wechatpy>=1.8.18",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "python-magic>=0.4.27",
    "jinja2>=3.1.6",
    "croniter>=6.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "psycopg2-binary>=2.9.11",
    "types-pyyaml>=6.0.12.20250915",
    "respx>=0.22.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "N",    # pep8-naming
    "C90",  # mccabe complexity
]
ignore = [
    "B008",  # FastAPI Depends() 在默认参数中调用函数，合法
    "N818",  # 允许自定义异常不以 Error 结尾
]

[tool.ruff.lint.per-file-ignores]
# SQLAlchemy string-based relationship annotations reference classes defined in
# sibling modules; they are resolved at runtime by the mapper registry, not by
# ruff's static analysis. Suppress the false-positive F821 for all model files.
"app/db/models/*.py" = ["F821"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
# Core checks (strict minus disallow_any_generics)
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
# Relaxed: langchain/langgraph generics cause unavoidable false positives
disallow_any_generics = false
warn_return_any = false
# Relaxed: langgraph TypedDict state schema patterns
disable_error_code = ["typeddict-item", "return-value", "override", "has-type"]
allow_redefinition = true
# Suppress missing stubs (qdrant-client, minio, redis, pypdf, docx, tiktoken)
ignore_missing_imports = true
explicit_package_bases = true
exclude = ["alembic/", "tests/"]

[[tool.mypy.overrides]]
# SQLAlchemy string relationship annotations (e.g. Mapped["User"]) reference
# classes in sibling modules; the mapper registry resolves them at runtime.
# Suppress the false-positive name-defined errors for all model domain files.
module = "app.db.models.*"
disable_error_code = ["name-defined"]

[[tool.mypy.overrides]]
# croniter has types-croniter stubs available but not installed; the import is
# guarded by a try/except so runtime behaviour is unaffected.
module = "app.api.cron"
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
